--- a/Company/style.css
+++ b/Company/style.css
@@ -191,6 +191,7 @@ textarea {
   padding: 15px;
   background: #f5f5f5;
   font-weight: bold;
+ 
 }
 
 .company-sub-header {
@@ -198,12 +199,13 @@ textarea {
   justify-content: space-between;
   padding: 10px 15px;
   background: #e9ecef;
+  margin-bottom: 10px;
 }
 
 .company-list {
   height: 400px;
   overflow-y: scroll;
-  border: 1px solid #ccc;
+ 
 }
 .company-list::-webkit-scrollbar{
   display: none;
@@ -219,6 +221,13 @@ textarea {
 .company-row button {
   padding: 5px 10px;
   cursor: pointer;
+}
+.company-item{
+ margin-top: 5px;
+  height: 2rem;
+  font-size: 18px;
+  align-items: end;
+  padding-left: 20px;
 }
 /* ===== DAYBOOK IMPROVED DESIGN ===== */
 
